--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   border: 1px solid salmon;
 } */
 
+div {
+  user-select: none;
+}
+
 @layer base {
   html {
     font-family: "Poppins", sans-serif;
